# cogni

./: .dependency-cruiser.cjs  .dockerignore  .env.local.example  .env.operator.example  .env.test.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  REUSE.toml  ROADMAP.md  biome.json  drizzle.config.ts  eslint.config.mjs  hardships.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.mts  vitest.workspace.ts
.claude/: settings.json
.cogni/: repo-spec.yaml  sync-manifest.yaml
.promote-state/: candidate-sha  current-sha  source-sha-by-app.json
biome/: app.json  base.json
config/: mcp.servers.json
eslint/: chain-governance.config.mjs  ui-governance.config.mjs
infra/: secrets-catalog.yaml
scripts/: AGENTS.md  check-all.sh  (+14 more)
services/rust-node/: AGENTS.md  Cargo.toml  Dockerfile
services/rust-node/crates/cogni-rust-node-contracts/: Cargo.toml
services/rust-node/crates/cogni-rust-node-contracts/src/: lib.rs
services/rust-node/crates/cogni-rust-node-contracts/tests/: summary.rs
services/rust-node/crates/cogni-rust-node-core/: Cargo.toml
services/rust-node/crates/cogni-rust-node-core/src/: accounts.rs  ai.rs  billing.rs  chat.rs  lib.rs  payments.rs
services/rust-node/crates/cogni-rust-node-core/tests/: parity.rs
services/rust-node/crates/cogni-rust-node-runtime/: Cargo.toml
services/rust-node/crates/cogni-rust-node-runtime/src/: app.rs  main.rs
services/rust-node/crates/cogni-rust-node-runtime/tests/: runtime.rs
(+2113 files in other folders)
