[workspace]
members = [
  "crates/cogni-rust-node-core",
  "crates/cogni-rust-node-contracts",
  "crates/cogni-rust-node-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "LicenseRef-PolyForm-Shield-1.0.0"
authors = ["Cogni-DAO"]

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
