[package]
name = "cogni-rust-node-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
cogni-rust-node-contracts = { path = "../cogni-rust-node-contracts" }
cogni-rust-node-core = { path = "../cogni-rust-node-core" }

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
